# datapainter

./: .clang-format  .gitignore  BUILD.md  CHANGELOG.md  CLARIFICATIONS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  HAIKU_BUILD_STATUS.md  IMPROVEMENTS.md  PACKAGING_TODO.md  README.md  TODO.md  chatgpt-questions.md  envsetup.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci-haiku.yml  ci.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: ARCHITECTURE.md  BUILDING.md  RELEASE.md  TESTING.md  datapainter.1  delete_not_deleting_issue.md  table_view_implementation_status.md  zoom_behavior_spec.md
include/: argument_parser.h  axis_renderer.h  cursor_utils.h  data_table.h  database.h  edit_area_renderer.h  footer_renderer.h  header_renderer.h  help_overlay.h  input_handler.h  input_source.h  metadata.h  point_editor.h  random_dialog.h  random_initializer.h  save_manager.h  study_mode.h  table_creation_dialog.h  table_manager.h  table_selection_menu.h  table_view.h  terminal.h  undo_log_manager.h  undo_manager.h  unsaved_changes.h  viewport.h
scripts/: build-haiku-cross.sh  build-haiku.sh  build-linux.sh  build-macos-pkg.sh  build-macos.sh  build-windows.sh  install.ps1  setup-haiku-cross-env.sh  uninstall.ps1  update-haiku-repo.sh
src/: argument_parser.cpp  axis_renderer.cpp  cursor_utils.cpp  data_table.cpp  database.cpp  edit_area_renderer.cpp  footer_renderer.cpp  header_renderer.cpp  help_overlay.cpp  input_handler.cpp  input_source.cpp  main.cpp  metadata.cpp  point_editor.cpp  random_dialog.cpp  random_initializer.cpp  save_manager.cpp  study_mode.cpp  table_creation_dialog.cpp  table_manager.cpp  table_selection_menu.cpp  table_view.cpp  terminal.cpp  undo_log_manager.cpp  undo_manager.cpp  unsaved_changes.cpp  viewport.cpp
tests/: README_RESIZE_TESTING.md  test_argument_parser.cpp  test_axis_renderer.cpp  test_cursor_boundary.cpp  test_cursor_coordinate_conversion.cpp  test_data_table.cpp  test_database.cpp  test_deletion_database.cpp  test_discard_changes_on_quit.cpp  test_edit_area_renderer.cpp  test_edit_area_renderer.cpp.bak  test_flip_functionality.cpp  test_footer_renderer.cpp  test_footer_width.cpp  test_header_renderer.cpp  test_help_overlay.cpp  test_input_handler.cpp  test_input_source.cpp  test_integration.cpp  test_main.cpp  test_metadata.cpp  test_metadata_table.cpp  test_mouse_support.cpp  test_point_editor.cpp  test_point_editor_with_unsaved.cpp  test_quit_after_save_scenario.cpp  test_quit_counts_only_active_changes.cpp  test_quit_with_unsaved.cpp  test_random_initializer.cpp  test_render_inactive_inserts.cpp  test_resize_debug.cpp  test_save_manager.cpp  test_save_resets_unsaved_count.cpp  test_study_mode.cpp  test_tab_order.cpp  test_table_manager.cpp  test_table_selection_menu.cpp  test_table_validation.cpp  test_table_view.cpp  test_terminal.cpp  (+5 more)
tests/integration/: .gitignore  README.md  debug_pty.py  pyproject.toml  test_basic_operations.py  test_check_database.py  test_create_table_flow.py  test_debug_deletion.py  test_keystroke_playback.py  test_non_interactive_commands.py  test_performance.py  test_tab_navigation.py  test_table_creation_dialog.py  test_table_creation_simple.py  test_table_view.py  tui_test_framework.py
