[project]
name = "datapainter"
version = "0.1.0"
description = "Interactive TUI for labeling 2D data points"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pyte>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
